--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1,6 +1,6 @@
 @font-face
-    font-family: "Exo"
-    src : url("../fonts/Exo2.0-Thin.otf")
+    font-family: "GilroyExtraBold"
+    src : url("../fonts/Gilroy.ttf")
 
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
 
